--- a/files/etc/dnsmasq.conf
+++ b/files/etc/dnsmasq.conf
@@ -36,5 +36,9 @@
 # The fields are <cname>,<target>
 #cname=bertand,bert
 
-address=/phicomm.com/192.168.1.1
+address=/proxy.imgdb.cn/192.168.1.1
+address=/home.imgdb.cn/192.168.1.3
+address=/git.imgdb.cn/192.168.1.3
+address=/mail.downk.cc/192.168.1.3
+address=/phicomm.com/192.168.1.3
 log-facility=/dev/null
