--- a/files/etc/samba/smb.conf
+++ b/files/etc/samba/smb.conf
@@ -143,3 +143,14 @@
 	fruit:metadata = stream
 	fruit:veto_appledouble = no
 	vfs objects = catia fruit streams_xattr  io_uring
+
+[sdb]
+	path = /mnt/sdb3
+	force user = root
+	force group = root
+	read only = no
+	inherit owner = yes
+	fruit:encoding = native
+	fruit:metadata = stream
+	fruit:veto_appledouble = no
+	vfs objects = catia fruit streams_xattr  io_uring
